fixed about me page

--- a/css/styles.css
+++ b/css/styles.css
@@ -134,3 +134,11 @@
     font-size: 150%;
     color: darkslategrey;
   }
+
+  p::selection {
+    background-color: yellow;
+  }
+
+  span::selection {
+    background-color: yellow;
+  }
