--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,38 @@
-.about-block {
-    padding: 3%;
+.grid-container {
+    display: grid;
+    grid-template-areas: 
+        "canada"
+        "documentary"
+        "dumb-game";
+    grid-template-rows: 1fr 2fr 1fr;
+    grid-template-columns: 1fr;
+}
+
+.canada{
+    display: flex;
+    grid-area: canada;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: darkslategrey;
+}
+
+.documentary {
+    display: flex;
+    grid-area: documentary;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: darkslategrey;
+}
+
+.dumb-game {
+    display: flex;
+    grid-area: dumb-game;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: darkslategrey;
 }
 
 .more {
@@ -14,4 +47,13 @@
 #about-bar {
     color: green;
     font-weight: bolder;
-  }
+}
+
+h2 {
+    font-size: 300%;
+}
+
+.my-intro {
+    font-size: 200%;
+}
+
