--- a/home/home-css.css
+++ b/home/home-css.css
@@ -10,14 +10,36 @@
   }
 
   @media(max-width: 600px) {
-    
+
+    .navbar {
+      position: fixed;
+      display: flex;
+      justify-content: left;
+      align-items: center;
+      width: 100%;
+      height: 3%;
+      background-color: #F7DAD9;
+      z-index: 1;
+    }
+  
   }
 
   @media(min-width: 601px) {
 
+    .navbar {
+      position: fixed;
+      display: flex;
+      justify-content: right;
+      align-items: center;
+      width: 100%;
+      height: 7%;
+      background-color: #F7DAD9;
+      z-index: 1;
+    }
+  
   }
 
-  .navbar {
+  /* .navbar {
     position: fixed;
     display: flex;
     justify-content: right;
@@ -26,7 +48,7 @@
     height: 7%;
     background-color: #F7DAD9;
     z-index: 1;
-  }
+  } */
 
   .nav-item {
     display: inline;
