--- a/home/home-css.css
+++ b/home/home-css.css
@@ -9,23 +9,20 @@
     font-weight: bolder;
   }
 
-  @media(max-width: 600px) {
-
+  @media (max-width: 300px) {
     .navbar {
       position: fixed;
       display: flex;
-      justify-content: left;
+      justify-content: right;
       align-items: center;
       width: 100%;
-      height: 3%;
-      background-color: #F7DAD9;
+      height: 4%;
+      background-color: red;
       z-index: 1;
     }
-  
   }
 
-  @media(min-width: 601px) {
-
+  @media (min-width: 301px) {
     .navbar {
       position: fixed;
       display: flex;
@@ -36,24 +33,12 @@
       background-color: #F7DAD9;
       z-index: 1;
     }
-  
   }
-
-  /* .navbar {
-    position: fixed;
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    width: 100%;
-    height: 7%;
-    background-color: #F7DAD9;
-    z-index: 1;
-  } */
 
   .nav-item {
     display: inline;
   }
-  
+
   .banner{
     background-color: #5D534A;
     position: relative;
