--- a/home/home-css.css
+++ b/home/home-css.css
@@ -28,12 +28,12 @@
   .banner{
     background-color: #5D534A;
     position: relative;
-    padding-top: 70px;
-    padding-bottom: 50px;
+    padding-top: 10%;
+    padding-bottom: 7%;
   }
 
   #opening {
-    margin: 50px auto 0;
+    margin: 1% auto 0% auto;
     font-family: "Consolas";
     font-size: 300%;
     color: whitesmoke;
@@ -56,11 +56,7 @@
   .self-introduction{
     background-color: #FFF5DA;
     padding-top: 100px;
-    padding-bottom: 20px;
-  }
-
-  .bio {
-    margin: 0 auto;
+    padding-bottom: 90px;
   }
 
   .info-heading, .courses{
@@ -83,10 +79,12 @@
       background-color: #D6D2C4;
       color: darkslategrey;
       padding-bottom: 5%;
+      padding-top: 5%;
   }
 
   .education {
       background-color: whitesmoke;
+      padding-top: 5%;
       padding-bottom: 5%;
       color: darkslategrey;
   }
@@ -96,12 +94,13 @@
     padding-top: 50px;
   }
 
-  h5 {
+  .h5 {
       font-weight: bold;
   }
 
-  h6 {
+  .h6 {
       font-style: italic;
+      font-size: smaller;
   }
   
   .pwc, .nakisa, .northeastern, .mcgill{
